src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Marked for Deletion (Product Version)</label>
        <picklist>
            <picklistValues>
                <fullName>7.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0x</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product.</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ContactCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - Account Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - Training Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension Pack - BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension Pack - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Extension Pack - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards-based Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <label>Proposed Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(INCLUDES( Customer_Account__r.Region__c , &quot;APAC&quot;), &quot;APAC&quot;, NULL)  + BR() + 
IF(INCLUDES( Customer_Account__r.Region__c , &quot;EMEA&quot;), &quot;EMEA&quot;, NULL)  + BR() + 
IF(INCLUDES( Customer_Account__r.Region__c , &quot;NAM&quot;), &quot;NAM&quot;, NULL) + BR() +
IF(INCLUDES( Customer_Account__r.Region__c , &quot;LatAm&quot;), &quot;LatAm&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Assignee__c</fullName>
        <description>Combination of Contact Name and Case Owner</description>
        <formula>Contact.FirstName &amp;&quot; &quot;&amp;Contact.LastName &amp;&quot; : &quot;&amp; CS_Case_Owner__c</formula>
        <label>Reporter/Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Release_Date__c</fullName>
        <label>Requested Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SLA_Exclusion_Reason__c</fullName>
        <label>SLA Exclusion Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Untimely Support Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Severity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity_Urgency__c</fullName>
        <description>Combination of  Severity and  Urgency.</description>
        <formula>TEXT(Severity__c) &amp;&quot; : &quot;&amp;  TEXT(CS_Urgency__c)</formula>
        <label>Severity/Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <controllingField>Asset_Type__c</controllingField>
            <picklistValues>
                <fullName>1-Blocker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1–Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2–Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3–Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4–Cosmetic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Summary_Next_Steps__c</fullName>
        <label>Status Summary/Next Steps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Alliances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Meeting Agenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Meeting Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices/Methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change order and Addendums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confluence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director&apos;s Meeting Agenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director&apos;s Meeting Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EchoSign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDADMIN/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gov.Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handbook Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Close_Date__c</fullName>
        <label>Target Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days_for_Case_Closure__c</fullName>
        <formula>ClosedDate -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days for Case Closure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_Rule_Che_ck__c</fullName>
        <formula>&apos;CS_Owner_Team__c=&apos;+CS_Owner_Team__c +BR() +
&apos;$User.ProfileId=&apos;+$User.ProfileId +BR() +RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Rule Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <description>Working day calculation, counts the days in between the case created and case closed dates. Included the create date and closed date into count.</description>
        <formula>CASE( 
MOD( DateValue(CreatedDate) - DATE(1985,6,24),7), 

0 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Datevalue(ClosedDate) - DateValue(CreatedDate) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Datevalue(ClosedDate) - DateValue(CreatedDate) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Working Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Products_List__c</fullName>
        <label>3rd Party Products List</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InetSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jetty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ScrumWorks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebSphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSG - Empire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Customer_Account__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Other,Case.Sales_Enablement</value>
        </filters>
        <label>All Open Cases - PSA</label>
        <language>en_US</language>
        <sharedTo>
            <group>PS_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Customer_Account__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Other,Case.Sales_Enablement</value>
        </filters>
        <label>All Closed Cases - PSA</label>
        <language>en_US</language>
        <sharedTo>
            <group>PS_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Guidewire_Live_Cases_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Guidewire_Live</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Guidewire Live Cases - Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>Guidewire_Live_Cases</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Severity__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Other,Case.Sales_Enablement</value>
        </filters>
        <label>All Open Cases - PSA</label>
        <language>en_US</language>
        <sharedTo>
            <group>PS_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Queues_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Customer_Account__c</columns>
        <columns>Region__c</columns>
        <columns>CS_Associated_Jira__c</columns>
        <columns>CS_Associated_Jira_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Queues Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
            <group>GW_ODC_Group</group>
            <group>GW_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Queues_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>Severity__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Associated_Jira__c</columns>
        <columns>CS_Associated_Jira_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Queues Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
            <group>GW_ODC_Group</group>
            <group>GW_Support_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>At_Risk</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Customer_Account__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Status_Summary_Next_Steps__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>At Risk</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Other,Case.Sales_Enablement</value>
        </filters>
        <label>At Risk - PSA</label>
        <language>en_US</language>
        <sharedTo>
            <group>PS_Help</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CE_SE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Implementation Queue</label>
        <queue>CE_SE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_All</fullName>
        <booleanFilter>1  AND 2 AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CS_Associated_Jira__c</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement Queue,Enablement-CE,Enablement-SE,Enablement-Other</value>
        </filters>
        <label>Implementation All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_BillingCenter_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-SE,Enablement-CE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Billing System</value>
        </filters>
        <label>BillingCenter Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_BillingCenter_Unassigned</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Billing System</value>
        </filters>
        <label>BillingCenter Unassigned</label>
        <language>en_US</language>
        <queue>CE_SE</queue>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_ClaimCenter_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-SE,Enablement-CE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Claim System</value>
        </filters>
        <label>ClaimCenter Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_ClaimCenter_Unassigned</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Claim System</value>
        </filters>
        <label>ClaimCenter Unassigned</label>
        <language>en_US</language>
        <queue>CE_SE</queue>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_Data_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CS_Owner_Team__c</field>
            <operation>equals</operation>
            <value>Enablement-SE,Enablement-CE,Enablement-Other</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <label>Data Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Enablement_Data_Unassigned</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Environment_Affected__c</columns>
        <columns>Severity__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CS_Escalation_Status__c</columns>
        <columns>ASSET.NAME</columns>
        <columns>CS_Associated_Jira__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CS_Customer_Support</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Verified</value>
        </filters>
        <filters>
            <field>CS_ODC__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CS_Support_Group__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <label>Data Unassigned</label>
        <language>en_US</language>
        <queue>CE_SE</queue>
        <sharedTo>
            <group>GW_Enablement_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CS_Customer_Support</fullName>
        <active>true</active>
        <businessProcess>Customer Support</businessProcess>
        <description>Use this Case Type to Submit Cases for Customer  Related Issues</description>
        <label>Customer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Guidewire_Live</fullName>
        <active>true</active>
        <businessProcess>Guidewire Live</businessProcess>
        <description>Use this record type for Guidewire Live Cases</description>
        <label>Guidewire Live</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <businessProcess>Proposal%2FContract</businessProcess>
        <description>Use this case type to track requests that can’t be defined as proposals or contracts (RFIs, RFPs, Communication, RALs, and EchoSign)</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Enablement</fullName>
        <active>true</active>
        <businessProcess>Proposal%2FContract</businessProcess>
        <description>Use this case type to track and process requests that required preparation of a customer facing deliverable (Proposals and Contracts)</description>
        <label>Sales Enablement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_Closing_Restriction</fullName>
        <active>false</active>
        <description>Preventing Closing of Case when the Case Owner is a Queue.</description>
        <errorConditionFormula>AND (ISPICKVAL(Status , &apos;Completed&apos;),OR(Owner:Queue.QueueName  = &apos;Operations(PS) Queue&apos;, Owner:Queue.QueueName =&apos;Enablement Queue&apos;) )</errorConditionFormula>
        <errorMessage>To Close the Case please assign it to a User</errorMessage>
    </validationRules>
</CustomObject>